fix: :art: fix bugs, improve structure, fix tests
